# misis2024s-23-03-shulgin-m-a

./: CMakeLists.txt  codeforces.id  status.md  test.cpp
prj.app/robocalc/: robocalc.cpp
prj.app/timing_q/: CMakeLists.txt  timing_q.cpp
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queue/: CMakeLists.txt  queue.cpp  queue.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprT/: CMakeLists.txt  queuelstprT.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  bitset_test.cpp  complex_test.cpp  dynarr_test.cpp  queue_test.cpp  queuearr_test.cpp  queuelstpr_test.cpp  queuelstprt_test.cpp  rational_test.cpp  stackarr_test.cpp  stacklst_test.cpp
